skip card then remove from deck and 1+ wild cards in deck bug